# jumanpp

./: .clang-format  .gitignore  .travis.yml  CITATION.cff  CLAUDE.md  CMakeLists.txt  CONTRIBUTORS  Dockerfile  Makefile  Makefile.am  README  README.md  README_ja.md  autogen.sh  cdb_juman.c  cdb_juman.h  charlattice.cc  charlattice.h  common.h  configure.ac  darts.h  dependencies.sh  dic.cc  dic.h  do_format.sh  feature.cc  feature.h  kkn_test.cc  make_release.sh  mkdarts.cc  morph.cc  node.cc  node.h  parameter.h  pos.cc  pos.h  scw.cc  scw.h  sentence.cc  sentence.h  (+11 more)
libs/: .gitignore  CMakeLists.txt  README.md  args.h  backward.hpp  catch.hpp  eigen.cmake
libs/backward-cfg/: backward-test.cpp
libs/benchpress/: benchpress.hpp  cxxopts.hpp
libs/pathie-cpp/: .dir-locals.el  .gitignore  CMakeLists.txt  Doxyfile  INSTALL.md  links.txt  pathlist.md
libs/pathie-cpp/examples/: decompose.cpp  findexample.cpp  minils.cpp  tempdir.cpp  tempfile.cpp
libs/pathie-cpp/include/: errors.hpp  pathie.hpp
libs/pathie-cpp/src/: entry_iterator.cpp  errors.cpp  path.cpp  pathie.cpp  pathie_ifstream.cpp  pathie_ofstream.cpp
libs/pathie-cpp/test/: Rakefile  encodings.cpp  path.cpp  pathie_streams.cpp  testhelpers.hpp
libs/pegtl/contrib/: tracer.hpp
src/: CMakeLists.txt  Makefile.am  cdb_juman.cc  cdb_juman.h  charlattice.cc  charlattice.h  common.h  darts.h  dic.cc  dic.h  feature.cc  feature.h  feature_vector.cc  feature_vector.h  hash.h  kkn_test.cc  mkdarts.cc  mmap.h  morph.cc  node.cc  node.h  parameter.h  pos.cc  pos.h  scw.cc  scw.h  sentence.cc  sentence.h  tagger.cc  tagger.h  tools.cc  u8string.cc  u8string.h  wvector.cc  wvector.h  wvector_test.cc
src/cdb/: CMakeLists.txt  Makefile.am  cdb  cdb.c
src/core/: CMakeLists.txt  core_config.h.in  core_version.h.in  env.cc  env.h  features_api.cc  features_api.h
src/core/analysis/: CMakeLists.txt  analysis_input.h  analysis_result.cc  analysis_result.h  analyzer.cc  analyzer.h  analyzer_impl.cc  analyzer_impl.h  charlattice.cc  charlattice_test.cc  dictionary_node_creator_test.cc  extra_nodes.h  innode_features.cc  innode_features.h  lattice_builder.cc  lattice_builder.h  lattice_builder_test.cc  lattice_compactor_test.cc  lattice_config.cc  lattice_config.h  lattice_types.cc  lattice_types.h  ngram_computations.cc  normalized_node_creator.cc  normalized_node_creator.h  normalized_node_creator_test.cc  numeric_creator.cc  numeric_creator_test.cc  onomatopoeia_creator.cc  onomatopoeia_creator.h  onomatopoeia_creator_test.cc  output.cc  output.h  perceptron.cc  perceptron.h  rnn_id_resolver.cc  rnn_id_resolver.h  rnn_scorer.cc  rnn_scorer.h  rnn_scorer_gbeam.cc  (+14 more)
src/core/benchmarks/: .clang-format  codegen_bench_01.cc  fasthash_bench.cc  feature_hash_kernel_bench.cc  perceptron_bench.cc
src/core/codegen/: CMakeLists.txt  cg_2_spec.h  feature_codegen.cc  feature_codegen_test.cc  ngram_feature_codegen.cc  partial_ngram_feature_codegen.cc  partial_ngram_feature_codegen.h  pattern_codegen_test.cc  pattern_feature_codegen.cc  pattern_feature_codegen.h
src/core/devtools/: CMakeLists.txt  fasthash_quality.cc  strings_alignment_hinter.cc
src/core/dic/: CMakeLists.txt  darts.h  darts_trie.cc  darts_trie.h  darts_trie_test.cc  dic_build_detail.cc  dic_build_detail.h  dic_builder.cc  dic_builder.h  dic_entries.h  dic_feature_impl.cc  dictionary.h  field_import.h  field_import_test.cc  field_reader.h  progress.h
src/core/impl/: CMakeLists.txt  aligned_field_test.cc  feature_computer.cc  feature_computer.h  feature_debug.cc  feature_debug.h  feature_impl_combine.cc  feature_impl_combine.h  feature_impl_combine_test.cc  feature_impl_compute.cc  feature_impl_compute.h  feature_impl_hasher.h  feature_impl_ngram_partial.h  feature_impl_ngram_partial_kernels.h  feature_impl_ngram_partial_test.cc  feature_impl_pattern.h  feature_impl_prim.cc  feature_impl_prim.h  feature_impl_prim_test.cc  feature_impl_types.h  feature_test.cc  global_beam_position_fmt.cc  global_beam_position_fmt.h  graphviz_format.cc  graphviz_format.h  graphviz_format_test.cc  int_seq_util.h  kvlist_test.cc  model_format.h  model_format_ser.h  model_io.cc  model_io.h  model_io_test.cc  segmented_format.cc  segmented_format.h
src/core/input/: CMakeLists.txt  partial_example.cc  partial_example.h  partial_example_io.cc  partial_example_io.h  partial_example_io_test.cc  pex_stream_reader.cc  pex_stream_reader.h  stream_reader.cc  stream_reader.h  training_io.cc  training_io.h
src/core/proto/: CMakeLists.txt  lattice_dump.proto  lattice_dump_output.cc  lattice_dump_output.h
src/core/spec/: CMakeLists.txt  spec_compiler.cc  spec_compiler.h  spec_dsl.cc  spec_dsl.h  spec_dsl_feature_test.cc  spec_grammar.h  spec_grammar_test.cc  spec_hashing.cc  spec_hashing.h  spec_parser.cc  spec_parser.h  spec_parser_impl.cc  spec_parser_impl.h  spec_parser_impl_test.cc  spec_ser.h  (+3 more)
src/jumandic/: CMakeLists.txt
src/rnn/: CMakeLists.txt  mikolov_rnn.cc  mikolov_rnn.h  mikolov_rnn_impl.h  mikolov_rnn_test.cc  rnn_arg_parse.h  simple_rnn_impl.h
src/rnnlm/: CMakeLists.txt  rnnlmlib.h  rnnlmlib_dynamic.cpp  rnnlmlib_dynamic.h  rnnlmlib_static.cpp  rnnlmlib_static.h
src/testing/: CMakeLists.txt  catch_main.cc  read_file_test.cc  standalone_test.h  test_analyzer.h
src/util/: CMakeLists.txt  array_slice.h  array_slice_test.cc  array_slice_util.h  assert.cc  assert.h  bounded_queue.h  cfg.h  char_buffer.h  characters.cc  characters.h  coded_io_test.cc  codegen.cc  codegen.h  common.hpp  csv_reader.cc  csv_reader.h  debug_output.h  fast_hash.h  fast_hash_rot.h  fast_hash_test.cc  fast_printer.h  flatmap.h  flatrep.h  flatset.h  format.h  hashing_test.cc  inlined_vector_test.cc  lazy.h  lazy_test.cc  logging.cpp  memory.cpp  memory.hpp  memory_test.cpp  mmap.cc  mmap.h  mmap_impl_unix.h  mmap_impl_win32.h  mmap_test.cc  parse_utils.cc  (+24 more)
v2/: .clang-format  CMakeLists.txt  README.md  do_format.sh
v2/docs/: dictionary.md
v2/src/: CMakeLists.txt
v2/test/: CMakeLists.txt  fixed_min_queue_test.cpp  memory_test.cpp  status_test.cpp  test_characters.cpp
v2/tools/: string2charlit.py
(+579 files in other folders)
