
SUBDIRS = src 
ACLOCAL_AMFLAGS = ${ACLOCAL_FLAGS} -I m4
DIST_SUBDIRS = $(SUBDIRS)

EXTRA_DIST = README.md README_ja.md VERSION script/server.rb script/client.rb script/postprocess.py script/corpus2train.rb script/fullmrp2basep.rb script/jmn2base.py sample/part_sample.txt sample/python_juman.py sample/python_knp.py


