
noinst_LIBRARIES = libcdb.a 
# AM_CXXFLAGS = -Ofast -m64 -Wall -funroll-loops -ffast-math
libcdb_a_CFLAGS = -Ofast -fPIC -D_FILE_OFFSET_BITS=64

libcdb_a_SOURCES = cdb_init.c cdb_find.c cdb_findnext.c cdb_seq.c cdb_seek.c \
 cdb_unpack.c cdb_make_add.c cdb_make_put.c cdb_make.c cdb_hash.c cdb_int.h cdb.h

